--- a/long_short_methodologies/absolute_relative.ipynb
+++ b/long_short_methodologies/absolute_relative.ipynb
@@ -16,12 +16,24 @@
     }
    ],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "import yfinance as yf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
