Add comments with explanations

--- a/long_short_methodologies/absolute_relative.ipynb
+++ b/long_short_methodologies/absolute_relative.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "# S&P500 dataframe: list of tickers\n",
+    "# Download the latest S&P 500 constituents\n",
     "sp_df = pd.read_html('https://wikipedia.org/wiki/List_of_S%26P_500_companies', flavor='html5lib')[0]\n",
     "sp_df"
    ],
@@ -112,7 +112,9 @@
     }
    ],
    "source": [
+    "# Reformat to ensure compatibility with Yahoo Finance\n",
     "sp_df['Symbol'] = sp_df['Symbol'].str.replace('.', '-')\n",
+    "\n",
     "bm_ticker = '^GSPC'\n",
     "tickers_list = [bm_ticker] + list(sp_df['Symbol'])[:]\n",
     "\n",
@@ -135,6 +137,7 @@
     "\n",
     "    df_abs = df_abs.join(batch_download, how='outer')\n",
     "\n",
+    "# Aggregate results\n",
     "bullbear = pd.DataFrame()\n",
     "bullbear['benchmark'] = round(df_abs[bm_ticker].copy(), 2)\n",
     "\n",
